manifests/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openmpp
spec:
  selector:
    matchLabels:
      name: openmpp
  template:
    metadata:
      labels:
        name: openmpp
    spec:
      containers:
        - name: app
          image: jacekdudek/microsimulation:latest
          ports:
            - containerPort: 4040
