manifests/LoadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: openmpp
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 4040
  selector:
    name: openmpp
