manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 4040
  selector:
    name: hello-kubernetes
