manifests/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openmpp
spec:
  selector:
    matchLabels:
      name: openmpp
  template:
    metadata:
      labels:
        name: openmpp
    spec:
      containers:
        - name: app
          image: jacekdudek/microsimulation:latest
          ports:
            - containerPort: 4040 

apiVersion: v1
kind: Service
metadata:
  name: openmpp
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 4040
  selector:
    name: openmpp
